<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/trego"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/tre" />

    <TextView
        style="@style/namePage"
        android:id="@+id/namePage"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/pageName"
        app:layout_constraintTop_toBottomOf="@+id/trego"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="750dp"
        app:layout_constraintTop_toBottomOf="@+id/namePage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nameSectionOne"
                style="@style/textSection"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/sectionOne"
                android:layout_gravity="start"
                />

            <TextView
                android:id="@+id/fullName"
                style="@style/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:layout_gravity="start"
                />
            <EditText
                android:id="@+id/enterName"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:inputType="text"
                android:layout_gravity="start"
                android:hint="@string/hintName"
                />

            <TextView
                android:id="@+id/tituloEleitor"
                style="@style/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloEleitor"
                android:layout_gravity="start"
                />
            <EditText
                android:id="@+id/enterTitulo"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:inputType="number"
                android:layout_gravity="start"
                android:hint="@string/enterTitulo"
                />

            <TextView
                android:id="@+id/numeroZona"
                style="@style/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeroZona"
                android:layout_gravity="start"
                />
            <EditText
                android:id="@+id/enterZona"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:inputType="number"
                android:layout_gravity="start"
                android:hint="@string/enterTitulo"
                />

            <TextView
                android:id="@+id/numeroSecao"
                style="@style/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeroSecao"
                android:layout_gravity="start"
                />
            <EditText
                android:id="@+id/enterSecao"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:inputType="number"
                android:layout_gravity="start"
                android:hint="@string/enterTitulo"
                />

            <TextView
                android:id="@+id/nomeCidade"
                style="@style/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomeCidade"
                android:layout_gravity="start"
                />
            <EditText
                android:id="@+id/enterCidade"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:inputType="text"
                android:layout_gravity="start"
                android:hint="@string/hintName"
                />

            <TextView
                android:id="@+id/nomeEstado"
                style="@style/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterEstado"
                android:layout_gravity="start"
                />
            <Spinner
                android:id="@+id/enterEstado"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:layout_gravity="start"
                android:entries="@array/estados"
                />

            <TextView
                android:id="@+id/nameSectionTwo"
                style="@style/textSection"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/sectionTwo"
                android:layout_gravity="start"
                />

            <TextView
                android:id="@+id/nomePrefeito"
                style="@style/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomePrefeito"
                android:layout_gravity="start"
                />
            <Spinner
                android:id="@+id/enterPrefeito"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:layout_gravity="start"
                android:entries="@array/prefeitos"
                />

            <TextView
                android:id="@+id/nomeVereador"
                style="@style/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomeVereador"
                android:layout_gravity="start"
                />
            <Spinner
                android:id="@+id/enterVereador"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:layout_gravity="start"
                android:entries="@array/vereador"
                />

            <TextView
                android:id="@+id/nomePartido"
                style="@style/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomePartido"
                android:layout_gravity="start"
                />
            <Spinner
                android:id="@+id/enterPartido"
                style="@style/textEdit"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:layout_gravity="start"
                android:entries="@array/partidos"
                />

            <Button
                android:id="@+id/btnEnviar"
                style="@style/button"
                android:layout_gravity="center"
                android:text="@string/button" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>